--- a/mysite/core/templates/core/baseEtudiant.html
+++ b/mysite/core/templates/core/baseEtudiant.html
@@ -110,6 +110,7 @@
             width: 100%;
         }
     </style>
+    
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-custom px-4 py-2">
@@ -140,7 +141,7 @@
                             <span>Mes Cours</span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-custom">
-                            <li><a class="dropdown-item dropdown-item-custom" href="">
+                            <li><a class="dropdown-item dropdown-item-custom" href="{% url 'mes_coursEtudiant' %}">
                                 <i class="fas fa-list"></i>Mes cours suivis
                             </a></li>
                             <li><a class="dropdown-item dropdown-item-custom" href="">
